This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Python 3.8b1 miscompiles conditional expressions containing __debug__
Type: Stage: resolved
Components: Interpreter Core Versions: Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: mgedmin, miss-islington, pablogsal
Priority: normal Keywords: patch

Created on 2019-06-13 18:56 by mgedmin, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 14071 merged pablogsal, 2019-06-14 05:27
PR 14072 merged miss-islington, 2019-06-14 05:55
PR 14073 merged pablogsal, 2019-06-14 05:58
Messages (5)
msg345533 - (view) Author: Marius Gedminas (mgedmin) * Date: 2019-06-13 18:56
Python 3.8 miscompiles the following code:

    $ cat /tmp/wat.py
    enable_debug = False

    if not enable_debug or not __debug__:
        print("you shall not pass!")

    $ python3.7 /tmp/wat.py
    you shall not pass!

    $ python3.8 /tmp/wat.py

(no output is produced.)

This is a distilled example from zope.traversing's codebase (https://github.com/zopefoundation/zope.traversing/issues/13).
msg345552 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2019-06-14 05:55
New changeset 05f831865545b08c9a21cfb7773af58b76ec64cb by Pablo Galindo in branch 'master':
bpo-37269: Correctly optimise conditionals with constant booleans (GH-14071)
https://github.com/python/cpython/commit/05f831865545b08c9a21cfb7773af58b76ec64cb
msg345554 - (view) Author: miss-islington (miss-islington) Date: 2019-06-14 06:13
New changeset 7cd581a6bf82309b3c9b9251c54067d442732485 by Miss Islington (bot) in branch '3.8':
bpo-37269: Correctly optimise conditionals with constant booleans (GH-14071)
https://github.com/python/cpython/commit/7cd581a6bf82309b3c9b9251c54067d442732485
msg345555 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2019-06-14 06:18
New changeset 5292179afc6fd0dc533add054d4790773c9766d0 by Pablo Galindo in branch '3.7':
[3.7] bpo-37269: Correctly optimise conditionals with constant booleans (GH-14071) (GH-14073)
https://github.com/python/cpython/commit/5292179afc6fd0dc533add054d4790773c9766d0
msg345556 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2019-06-14 06:19
Thanks, Marius for the report!
History
Date User Action Args
2022-04-11 14:59:16adminsetgithub: 81450
2019-06-14 06:19:13pablogsalsetstatus: open -> closed
resolution: fixed
messages: + msg345556

stage: patch review -> resolved
2019-06-14 06:18:54pablogsalsetmessages: + msg345555
2019-06-14 06:13:28miss-islingtonsetnosy: + miss-islington
messages: + msg345554
2019-06-14 05:58:22pablogsalsetpull_requests: + pull_request13931
2019-06-14 05:55:26miss-islingtonsetpull_requests: + pull_request13930
2019-06-14 05:55:00pablogsalsetmessages: + msg345552
2019-06-14 05:38:27pablogsalsetnosy: + pablogsal
2019-06-14 05:27:43pablogsalsetkeywords: + patch
stage: patch review
pull_requests: + pull_request13929
2019-06-13 18:56:04mgedmincreate